# dbus-prettifier

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  dbus-prettifier.1  install  out.txt  test.txt  uninstall
src/: main.c  main.rs  worker.rs
